# passion-project

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  PROJECT_STRUCTURE.md  README.md  SPECIFICATIONS.md  compose.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
backend/: .coveragerc-fitness  .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.lock.txt  requirements.lock.txt
backend/config/: llm_routing.yaml  training_seed.yaml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  20260528_1200_add_retired_exercises.py
backend/src/: __init__.py  celery_app.py  main.py
backend/src/agents/: __init__.py
backend/src/agents/fitness/: __init__.py
backend/src/api/: __init__.py  dependencies.py  router.py
backend/src/api/middleware/: __init__.py
backend/src/api/v1/: __init__.py  analysis.py  auth.py  workouts.py
backend/src/brain/: __init__.py  graph.py  state.py
backend/src/brain/nodes/: __init__.py
backend/src/brain/tools/: __init__.py
backend/src/core/: __init__.py  config.py  exceptions.py  logging.py  observability.py  security.py
backend/src/db/: base.py  session.py
backend/src/integrations/: __init__.py
backend/src/integrations/mcp/: __init__.py  hevy.py
backend/src/jobs/: __init__.py  schedule.py  tasks.py
backend/src/llm/: __init__.py  budget.py  router.py
backend/src/llm/guardrails/: __init__.py
backend/src/llm/prompts/: __init__.py
backend/src/llm/providers/: __init__.py
backend/src/memory/: __init__.py
backend/src/models/: __init__.py  analysis.py  base.py  chat.py  coaching.py  gamification.py  health.py  system.py  targets.py  workouts.py
backend/src/passion_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/repositories/: __init__.py  analysis.py  base.py  workouts.py
backend/src/schemas/: analysis.py  auth.py  workouts.py
backend/src/scripts/: __init__.py  hash_password.py  seed_training.py
backend/src/services/: __init__.py
backend/src/services/fitness/: __init__.py  analysis_runner.py  plateau.py  pr_detection.py  recovery.py  stats.py  sync.py  targets.py
backend/tests/: conftest.py
backend/tests/features/: hevy_sync.feature  test_hevy_sync.py
backend/tests/integration/api/: test_auth.py  test_health.py
backend/tests/integration/repositories/: test_workouts_repo.py
backend/tests/unit/core/: test_logging.py  test_security.py
backend/tests/unit/integrations/: test_hevy_normalize.py
backend/tests/unit/services/fitness/: test_plateau.py  test_pr_detection.py  test_recovery.py  test_retired_filter.py  test_stats.py  test_targets.py
db/: schema.sql
docs/: API_CONTRACTS.md  ARCHITECTURE.md  NON_FUNCTIONAL_REQUIREMENTS.md  ROADMAP.md
docs/decisions/: ADR-001-backend-language.md  ADR-002-llm-integration-strategy.md  ADR-003-hosting-strategy.md  ADR-004-network-exposure.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  postcss.config.mjs
frontend/messages/: en.json  fr.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/dashboard/: agent-status.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/api/: client.ts
frontend/src/lib/ws/: chat-socket.ts
infra/: .env.example  docker-compose.yml
infra/caddy/: Caddyfile
infra/grafana/dashboards/: passion-api.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/promtail/: promtail-config.yml
infra/scripts/: backup.sh  create-partitions.sh  dev-helpers.ps1
