[project]
name = "passion-backend"
version = "0.1.0"
description = "PASSION — personal AI operating system (backend)"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.136",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.13",
    "pydantic-settings>=2.6",
    # Database
    "sqlalchemy>=2.0.49",
    "alembic>=1.14",
    "asyncpg>=0.31",
    "psycopg2-binary>=2.9",      # for Alembic sync migrations
    "pgvector>=0.4",
    # Cache + queues
    "redis>=7.4",
    "celery>=5.6",
    # LLM + agents
    "anthropic>=0.104",
    "google-genai>=2.6",
    "langgraph>=1.2",
    "mcp>=1.27",
    # Auth + security
    "bcrypt>=5.0",
    "pyjwt>=2.10",
    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    # HTTP
    "httpx>=0.28",
    # Config
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "mypy>=2.1",
    "pytest>=9.0",
    "pytest-asyncio>=1.3",
    "pytest-bdd>=8.1",
    "pytest-cov>=7.0",
    "testcontainers[postgres]>=4.14",
    "polyfactory>=3.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

# Third-party libs without py.typed markers.
[[tool.mypy.overrides]]
module = ["celery.*", "pgvector.*"]
ignore_missing_imports = true

# ORM models use bare `dict` for JSONB columns; pre-existing convention kept
# until repositories land in sprint 1.
[[tool.mypy.overrides]]
module = "src.models.*"
disallow_any_generics = false

# Sprint-N stubs (raise NotImplementedError). Relaxed until those sprints fill them in.
[[tool.mypy.overrides]]
module = [
    "src.brain.*",
    "src.integrations.*",
    "src.jobs.*",
    "src.llm.*",
]
disallow_any_generics = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.report]
# Global threshold stays at 0 (lots of sprint-N stubs); per-domain coverage
# is enforced separately in CI for the pure fitness services (90% — S2).
fail_under = 0
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.coverage.run]
omit = [
    # I/O glue with DB / Celery / MCP — covered by integration tests in
    # tests/integration/, not by pure unit tests. Wildcards required because
    # coverage resolves to absolute paths.
    "*/services/fitness/analysis_runner.py",
    "*/services/fitness/sync.py",
    "*/scripts/*",
    "*/jobs/tasks.py",
    "*/celery_app.py",
    "*/main.py",
    "*/db/session.py",
    "*/core/observability.py",
    "*/core/logging.py",
]
